# normalizing_flows

./: .gitignore  README.md  REPRODUCIBILITY.txt  coursework.ipynb  pyproject.toml  requirements-lock.txt  results.json  visualization_utils.py
checkpoints/: flow_full.pt
logs/: training_curves.json
scripts/: register_kernel.sh  run_notebook.sh  setup_env.sh
