[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m2-normalizing-flows"
version = "0.1.0"
description = "M2 Deep Learning coursework: normalizing flow"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "notebook>=7.0.0",
    "nbconvert>=7.16.0",
    "ipykernel>=6.25.0",
]

[tool.setuptools]
packages = []
